# dimensional_reduction

./: .gitignore  Cargo.toml  README.md
binding/: Cargo.toml
binding/src/: barnes_hut_sigmoid_decomposition.rs  lib.rs  macros.rs  numpy_decomposition.rs  sampled_sigmoid_decomposition.rs  sigmoid_decomposition.rs  traits.rs
dimensional_reduction/: Cargo.toml
dimensional_reduction/src/: basic_decomposition.rs  basic_iterative_decomposition.rs  traits.rs  utils.rs
src/: barnes_hut_sigmoid_decomposition.rs  basic_decomposition.rs  basic_iterative_decomposition.rs  lib.rs  macros.rs  numpy_decomposition.rs  sampled_sigmoid_decomposition.rs  sigmoid_decomposition.rs  traits.rs  utils.rs
tests/: test_barnes_hut.py
