[package]
name = "dimensional_reduction"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = {git="https://github.com/LucaCappelletti94/num-traits.git", features=["atomic_from_mut"]}
indicatif = {version="0.17.0", features = ["rayon"]}
rayon = "1.1"
half = {git = "https://github.com/LucaCappelletti94/half-rs.git", features = ["use-intrinsics", "num-traits"]}
vec_rand = { git = "https://github.com/zommiommy/vec_rand", branch = "master" }